tests/dataset/tpc-ds/compiler/kotlin/q6.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q6.kt:78:45: error: type mismatch: inferred type is Double but Boolean was expected
                                        if (toDouble(toDouble(d.d_month_seq == target_month_seq && i.i_current_price) > toDouble(1.2)) * toDouble(run { val r = run {
                                            ^
/tmp/q6.kt:78:100: error: type mismatch: inferred type is Double but Boolean was expected
                                        if (toDouble(toDouble(d.d_month_seq == target_month_seq && i.i_current_price) > toDouble(1.2)) * toDouble(run { val r = run {
                                                                                                   ^
